# PeterdeGuzman_IndividualProject2

./: .env  .gitignore  Makefile  README.md  main.py  query_log.md  requirements.txt  test_main.py
.github/workflows/: CI.yml
mylib/: lib.py  main.py
votesqlite/: Cargo.toml  Makefile
votesqlite/src/: crud.rs  lib.rs  main.rs  pollingplace.rs  storage.rs  transform.rs  voterreg.rs
