[package]
name = "votesqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.8", features = ["blocking"]}
zip = "2.2.0"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
regex = "1.11.0"
sqlx = {version = "0.8.2", features = ["sqlite"]}
dotenv = "0.15.0"
encoding = "0.2.33"
rusqlite = "0.32.1"
encoding_rs = "0.8.35"
jemallocator = "0.5.4"
sysinfo = "0.32.0"

